# m3-software-modular-monolith-arch

./: .dockerignore  .editorconfig  .gitignore  AssemblyReference.cs  Directory.Packages.props  README.md  Taskfile.yml  docker-compose.override.yml  docker-compose.yml  fix-permissions.sh  init-keycloak-db.sh  launchSettings.json  m3.net.sln
.github/workflows/: build.yml
docs/: INTEGRATION_STEPS.md  PYTHON_INTEGRATION_STEPS.md
docs/ADRs/: ADR-002-Transcripts-Module-Architecture.md  ADR-003-Event-Storming-Transcripts-Bounded-Contexts.md  ADR-004-Python-Transcript-Processing-Service.md  ADR-005-YouTube-Whisper-Tutorial-Analysis.md  ADR-006-Transactional-Outbox-Integration.md
src/API/M3.Net.Api/: Dockerfile  M3.Net.Api.csproj  M3.Net.Api.http  Program.cs  appsettings.json  modules.transcripts.json  modules.users.json
src/Common/M3.Net.Common.Application/: ApplicationConfiguration.cs  M3.Net.Common.Application.csproj
src/Common/M3.Net.Common.Domain/: DomainEvent.cs  Entity.cs  Error.cs  ErrorType.cs  IDomainEvent.cs  M3.Net.Common.Domain.csproj  Result.cs  ValidationError.cs
src/Common/M3.Net.Common.Infrastructure/: InfrastructureConfiguration.cs  M3.Net.Common.Infrastructure.csproj
src/Common/M3.Net.Common.Presentation/: M3.Net.Common.Presentation.csproj
src/python/transcript-api/: .env.example  Dockerfile  README.md  pyproject.toml
src/python/transcript-consumer/: Dockerfile  README.md  pyproject.toml
src/python/transcript-consumer/src/transcript_consumer/: app.py  transcripts_consumer.py
src/python/transcript-mcp/: .env.example  Dockerfile  README.md  (+1 more)
(+265 files in other folders)
