[project]
name = "transcript-consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio_pika>=9.5.4",
    "aiofiles>=24.1.0",
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.10.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcript_consumer"]

[tool.ruff]
target-version = "py312"